creating bonuse section

--- a/index.html
+++ b/index.html
@@ -25,11 +25,28 @@
     </header>
     <main>
         <div>
-            <div>
+            <div class="text-description">
                 <h4>Our Featured Flowers</h4>
                 <p>
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit, dolor architecto, dolore distinctio, dolorem tenetur voluptatum laboriosam odit consequuntur dolorem?
                 </p>
+            </div>
+            <div class="flower">
+                <img class="flower-1" src="Flower Asset/pngwing 5.png" alt="">
+                <h5>
+                    Pink Flower Tree
+                </h5>
+
+                <img class="flower-2" src="Flower Asset/pngwing 6.png" alt="">
+                 <h5>
+                    Red Flower Tree
+                </h5>
+                 <img class="flower-3" src="Flower Asset/pngwing 7.png" alt="">
+                 <h5>
+                    Blue Flower Tree
+                 </h5>
+
+
             </div>
         </div>
     </main>
