creating third section

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             </div>
             <div class="flower">
                 <img class="flower-1" src="Flower Asset/pngwing 5.png" alt="">
-                <h5>
+                <h5 class="heading">
                     Pink Flower Tree
                 </h5>
 
@@ -47,6 +47,15 @@
                  </h5>
 
 
+            </div>
+            <div class="section-3">
+                <h4>Hot Deal ! Sale Up To 25% Off</h4>
+                <p>
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quasi quae esse dicta atque eligendi commodi, libero tempora, quam eius corporis eveniet velit incidunt natus facilis molestiae modi placeat ea quaerat!
+                </p>
+                <div>
+                    <img src="Flower Asset/pngwing 8.png" alt="">
+                </div>
             </div>
         </div>
     </main>
