--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                 </div>
                 <div>
                     <div class="description-3">
-                    <h3>Instagram</h3>
+                    <h3 class="media">Instagram</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate dolorem sequi, quasi laborum quos dolores ea! Nam praesentium est nisi reiciendis sequi sunt cumque, voluptates?</p>
                     </div>
                     <div class="flower-5">
