added new section

--- a/index.html
+++ b/index.html
@@ -75,6 +75,12 @@
                     <img src="Flower Asset/Rectangle 6.png" alt="">
                     </div>
                 </div>
+                <div class="description-4">
+                    <h3 id="design">Get The Latest Deals</h3>
+                    <p>$30 coupon for first shopping</p>
+                    <input type="email" placeholder="Enter your email ">
+                    <button class="btn-primary-2">Subscribe</button>
+                </div>
             </div>
     
 
